Firefox testing - 4K display fixes - use doc.ready over win.load - min-size can be 0.1px and still fix the table spacing issue

--- a/modules/backend/assets/less/layout/layout.less
+++ b/modules/backend/assets/less/layout/layout.less
@@ -137,7 +137,7 @@ body {
         }
 
         &.min-size {
-            height: 1px;
+            height: 0.1px;
         }
     }
 
